# nwqueueadapters

./: .gitignore  CMakeLists.txt  README.md
cmake/: networkqueueConfig.cmake.in  nwqueueadaptersConfig.cmake.in
docs/: README.md
include/networkqueue/: NetworkObjectReceiver.hpp  NetworkObjectSender.hpp  NetworkQueueMacros.hpp  NetworkToQueue.hpp  NetworkToQueueAdapterDAQModule.hpp  QueueToNetwork.hpp  QueueToNetworkAdapterDAQModule.hpp  Serialization.hpp
include/networkqueue/detail/: NetworkToQueueAdapterDAQModule.hxx  QueueToNetworkAdapterDAQModule.hxx
include/networkqueue/fsd/: MsgPack.hpp  NToQMaker.hpp  Nljs.hpp  QToNMaker.hpp  Structs.hpp
include/networkqueue/fsdp/: Structs.hpp
include/networkqueue/nor/: Nljs.hpp  Structs.hpp
include/networkqueue/nos/: Nljs.hpp  Structs.hpp
include/networkqueue/nq/: Nljs.hpp  Structs.hpp
include/nwqueueadapters/: AdapterMacros.hpp  Issues.hpp  NetworkObjectReceiver.hpp  NetworkObjectSender.hpp  NetworkToQueue.hpp  QueueToNetwork.hpp
plugins/: NetworkToQueue.cpp  NetworkToQueueAdapterDAQModule.cpp  NetworkToQueueAdapterDAQModule.hpp  QueueToNetwork.cpp  QueueToNetworkAdapterDAQModule.cpp  QueueToNetworkAdapterDAQModule.hpp
python/: fake_data_consumer_confgen.py  fake_data_producer_confgen.py
python/nwqueueadapters/fake_data/: fake_data_consumer_gen.py  fake_data_producer_gen.py  toplevel.py
schema/: fake-data-consumer-job.json  fake-data-producer-job.json  foo.jsonnet  fsdc-job-with-serialization.json  fsdp-job-with-serialization.json  fsdpc-job-with-serialization.json  fsdpc-job.json  generate.sh  job-with-wrong-module-name-init.json  job-with-wrong-module-name.json  networkqueue-FakeSerializableDataConsumerDAQModule-schema.jsonnet  networkqueue-FakeSerializableDataProducerDAQModule-schema.jsonnet  networkqueue-NetworkToQueueAdapterDAQModule-schema.jsonnet  networkqueue-QueueToNetwork-schema.jsonnet  networkqueue-QueueToNetworkAdapterDAQModule-schema.jsonnet  networkqueue-cpp.hpp.j2  networkqueue-fsd-schema.jsonnet  networkqueue-fsdc-schema.jsonnet  networkqueue-fsdp-schema.jsonnet  networkqueue-nljs.hpp.j2  networkqueue-nor-schema.jsonnet  networkqueue-nos-schema.jsonnet  networkqueue-nq-schema.jsonnet  networkqueue-ntoq.cpp.j2  networkqueue-ntoqmaker.hpp.j2  networkqueue-qton.cpp.j2  networkqueue-qtonmaker.hpp.j2  networkqueue-structs.hpp.j2  nwqueueadapters-QueueToNetwork-schema.jsonnet  nwqueueadapters-fsd-schema.jsonnet  ontoqmaker.hpp.j2  oqtonmaker.hpp.j2
schema/networkqueue/: FakeDataConsumer.jsonnet  NetworkToQueue.jsonnet
schema/nwqueueadapters/: FakeDataConsumer.jsonnet  networkobjectreceiver.jsonnet  networkobjectsender.jsonnet  networktoqueue.jsonnet  networktoqueueinfo.jsonnet  queuetonetwork.jsonnet  queuetonetworkinfo.jsonnet
src/: QueueToNetworkAdapterDAQModule.cpp  dummy.cpp
test/apps/: fake_data_send_receive.cxx  network_object_send_receive.cxx  serialization_speed.cxx  serialization_speed_no_ipm.cxx
test/include/networkqueue/fsd/: Nljs.hpp  Structs.hpp
test/include/networkqueue/fsdc/: Nljs.hpp  Structs.hpp
test/plugins/: FakeData.cpp  FakeDataConsumer.cpp  FakeDataConsumer.hpp  FakeDataProducer.cpp  FakeDataProducer.hpp  FakeSerializableDataConsumerDAQModule.cpp  FakeSerializableDataConsumerDAQModule.hpp  FakeSerializableDataProducerDAQModule.cpp  FakeSerializableDataProducerDAQModule.hpp  NetworkToQueueAdapterDAQModuleOfFakeData.cpp  QueueToNetworkAdapterDAQModuleOfFakeData.cpp
test/schema/: networkqueue-FakeDataProducer-schema.jsonnet  nwqueueadapters-FakeDataProducer-schema.jsonnet
test/schema/nwqueueadapters/: fsd.jsonnet
test/src/networkqueue/fsd/: MsgP.hpp  Nljs.hpp  Structs.hpp
test/src/networkqueue/fsdc/: Nljs.hpp
test/src/networkqueue/fsdp/: Nljs.hpp
test/src/nwqueueadapters/fsd/: MsgP.hpp  Nljs.hpp  Structs.hpp
unittest/: NOR_NOS_test.cxx
